<resources>
    <string name="app_name">Pizza4u</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer ID</string>
    <string name="phone_number">Phone Number</string>

    <string name="employee_registation">Employee Registation</string>
    <string name="employee_name">Employee Name</string>
    <string name="number">Number</string>
    <string name="emailll">Email</string>
    <string name="psssword">Password</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="app_title">Pizza4u</string>
    <string name="app_icon_description">Pizza4uIcon</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign up</string>
    <string name="text_sign_up_manager">Sign up - Manager</string>
    <string name="text_sign_up_customer">Sign up - Customer</string>
    <string name="text_recover_password">Forgot your password?</string>
    <string name="button_recover_password">Recover password</string>
    <string name="text_copyright">©Pizza4u 2022 - All Rights Reserved</string>
    <string name="text_app_version">Version 1.0</string>

    <string name="manager">Manager</string>
    <string name="managericon">managerIcon</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_menu">Add Menu</string>
    <string name="employee_id">Employee Id</string>
    <string name="first_name">First Name</string>
    <string name="branch_id">Branch Id</string>
    <string name="last_name">Last Name</string>
    <string name="employee_registration">Employee Registration</string>
    <string name="phone">phone</string>
    <string name="email">Email</string>
    <string name="passward">Passward</string>

    <string name="text_view_cushome_description">Let\'s start your order now!</string>
    <string name="text_pizza_type">Non-Veg Pizza</string>
    <string name="item_home">Home</string>
    <string name="item_cart">Cart</string>
    <string name="item_orders">Orders</string>
    <string name="item_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza_type_view">Non-Veg Pizza</string>
    <string name="cus_profile_heading">My Profile</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="mail_hint">Email</string>
    <string name="location">Location</string>
    <string name="text_pizza">BBQ Chicken</string>
    <string name="pizza_description">Pepped Texas BBQ Chicken, Mango BBQ Source, Herb Tomato blend, 100% real mozzarella</string>

    <string name="txt_plist_type">Non-Veg Pizza</string>
    <string name="text_pizza_nameCart">BBQ Chicken</string>
    <string name="orderID">Order 1</string>
    <string name="totallbl">Total    :</string>
    <string name="totPrice">4500</string>
    <string name="chnge_loction">Change Location</string>
    <string name="txt_pricetotcart">Rs. </string>

    <string name="text_sign_up_title">Sign Up</string>
    <string name="edit_text_first_name">First Name</string>
    <string name="edit_text_last_name">Last Name</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_phone">Phone</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_branch_id">Branch ID</string>
    <string name="edit_text_employee_id">Employee ID</string>
    <string name="button_add_profile_picture">Add profile picture</string>
    <string name="menu_title_customer">Customer</string>
    <string name="menu_title_manager">Manager</string>
    <string name="button_create_account">Create account</string>
    <string name="button_cancel">Cancel</string>
    <string name="order_location">Order Location</string>
    <string name="choose_size">Choose Size</string>
    <string name="pizza_size">Small</string>
    <string name="password">Password</string>
    <string name="text_add_emp">Add New Employee</string>
    <string name="item_pizza_types">Pizza Types</string>
    <string name="item_pizzas">Pizzas</string>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="change_status">
        <item>Queued</item>
        <item>Preparing</item>
        <item>Delivering</item>
        <item>Completed</item>
    </string-array>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>