<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ManagerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardMaxElevation="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/pizzapic"
        android:backgroundTintMode="src_over"
        android:backgroundTint="#D3F1F0F0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSignUpTitleManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF5722"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/text_sign_up_manager"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextFirstNameManager"
                android:layout_width="300dp"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextLastNameManager"
                android:layout_width="300dp"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmailManager"
                android:layout_width="300dp"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPhoneManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextPasswordManager"
                android:layout_width="300dp"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextBranchIdManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/edit_text_branch_id"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextEmployeeIdManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:hint="@string/edit_text_employee_id"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/buttonAddProfilePictureManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="?android:attr/colorBackground"
                android:text="@string/button_add_profile_picture"
                android:textColor="?android:attr/textColorTertiary"
                app:rippleColor="?android:attr/colorActivatedHighlight" />

            <ImageView
                android:id="@+id/profilepicManager"
                android:layout_width="150dp"
                android:textColor="#FF5722"
                android:textColorHint="#919090"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/manager_icon" />

            <Button
                android:id="@+id/buttonCreateAccountManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button_create_account"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/buttonCancelManager"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?android:attr/colorBackground"
                android:text="@string/button_cancel"
                android:textColor="?android:attr/textColorTertiary"
                app:rippleColor="?android:attr/colorActivatedHighlight" />

        </LinearLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>